# EasyGPU

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Output-Build.txt  README.md  test_compound_assignment.cpp  test_void_return.cpp
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
docs/: api-reference.md  faq.md  getting-started.md  patterns.md  tutorial.md  unref.md
examples/hello_world/: main.cpp
examples/julia_set/: main.cpp
examples/mandelbrot/: main.cpp
examples/ray_tracing/: main.cpp
examples/sdf_renderer/: main.cpp
examples/volumetric_fog/: main.cpp
include/: GPU.h
include/Callable/: Callable.h
include/Flow/: Break.h  BreakFlow.h  CodeCollectContext.h  Continue.h  ContinueFlow.h  DoWhile.h  DoWhileFlow.h  For.h  ForFlow.h  If.h  IfFlow.h  Return.h  ReturnFlow.h  While.h  WhileFlow.h
include/IR/Builder/: Builder.h  BuilderContext.h
include/IR/Node/: ArrayAccess.h  Break.h  Call.h  CallInst.h  CompoundAssignment.h  Continue.h  DoWhile.h  For.h  If.h  Increment.h  Load.h  LoadLocalArray.h  LoadLocalVariable.h  LoadUniform.h  LocalVariable.h  LocalVariableArray.h  MemberAccess.h  Node.h  Operation.h  RawCode.h  Return.h  Store.h  Ternary.h  While.h
include/IR/Value/: BufferRef.h  Expr.h  ExprIVector.h  ExprMatrix.h  ExprVector.h  SideEffectToken.h  TextureRef.h  TextureSampler.h  Value.h  Var.h  VarArray.h  VarIVector.h  VarMatrix.h  VarStruct.h  VarVector.h
include/Kernel/: FragmentBuildContext.h  FragmentKernel.h  Kernel.h  KernelBuildContext.h  KernelProfiler.h  WindowAttachment.h
include/Runtime/: Buffer.h  BufferSlot.h  Context.h  GLStateCache.h  PixelFormat.h  ShaderException.h  ShaderUtils.h  Texture.h  TexturePBOManager.h  TextureSlot.h  Uniform.h
include/Utility/: Helpers.h  Math.h  Matrix.h  Unref.h  Vec.h
include/Utility/Meta/: Std430Layout.h  StructMeta.h
scripts/: format-code.py
source/Flow/: CodeCollectContext.cpp  If.cpp  IfFlow.cpp
source/IR/Builder/: Builder.cpp
source/IR/Node/: ArrayAccessNode.cpp  Break.cpp  Call.cpp  CallInst.cpp  CompoundAssignment.cpp  Continue.cpp  DoWhile.cpp  For.cpp  If.cpp  Increment.cpp  Load.cpp  LoadLocalArray.cpp  LoadLocalVariable.cpp  LoadUniform.cpp  LocalVariable.cpp  LocalVariableArray.cpp  MemberAccess.cpp  Operation.cpp  RawCode.cpp  Return.cpp  Store.cpp  Ternary.cpp  While.cpp
source/IR/Value/: Expr.cpp  SideEffectToken.cpp  Value.cpp  Var.cpp  VarArray.cpp
source/Kernel/: FragmentBuildContext.cpp  FragmentKernel.cpp  Kernel.cpp  KernelBuildContext.cpp  KernelProfiler.cpp  WindowAttachment.cpp
source/Runtime/: BufferSlot.cpp  Context.cpp  GLStateCache.cpp  ShaderUtils.cpp  TexturePBOManager.cpp  TextureSlot.cpp
source/Utility/: Math.cpp  Matrix.cpp  Vec.cpp
tests/: TestArray.cpp  TestBreakContinue.cpp  TestBroadcastConstruct.cpp  TestBuffer.cpp  TestBufferSlot.cpp  TestBufferSlotBasic.cpp  TestCallable.cpp  TestCopySign.cpp  TestDSL.cpp  TestDispatch.cpp  TestExpression.cpp  TestFlowDoWhile.cpp  TestFlowFor.cpp  TestFlowIf.cpp  TestFragmentKernel.cpp  TestInspector.cpp  TestKernel1D.cpp  TestMath.cpp  TestProfiler.cpp  TestSlotError.cpp  TestSlotMixed.cpp  TestSlotPingPong.cpp  TestStruct.cpp  TestTernary.cpp  TestTexture.cpp  TestTextureSlot.cpp  TestUniform.cpp  TestVec.cpp
third/: stb_image.h
third/GLAD/: glad.c  glad.h
